removendo --- da última linha

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -495,8 +495,8 @@
    "source": [
     "def write_data(outfile, documents, sentences):\n",
     "    with open(outfile, 'w') as file:\n",
-    "        file.write('---\\n')\n",
     "        for document, sentence in zip(documents, sentences):\n",
+    "            file.write('---\\n')\n",
     "            tree = sentence.to_tree()\n",
     "            name_tree, local_tree, date_tree, parent_tree, parent2_tree = get_parts(tree)\n",
     "            if name_tree:\n",
@@ -515,8 +515,7 @@
     "                    file.write('parents    :\\n')\n",
     "                    file.write(f'  - {parent1}\\n')\n",
     "                    if parent2:\n",
-    "                        file.write(f'  - {parent2}\\n')\n",
-    "                file.write('---\\n')"
+    "                        file.write(f'  - {parent2}\\n')"
    ]
   },
   {
